.tempCodeRunnerFile.txt



1/14/2020, 9:25:12 AM
Example.java:23: error: ';' expected
      System.out.println("All numbers are different")
                                                     ^
1 error
Input first number: 